<resources>
    <string name="app_name">MyDigiStore</string>

    <string name="action_bar_title_order_description">توضیحات سفارش</string>
    <string name="activity_register_family_name">نام خانوادگی</string>
    <string name="activity_register_mobile_phone">شماره موبایل</string>
    <string name="activity_register_name">نام</string>
    <string name="activity_register_password">رمز عبور (اختیار)</string>
    <string name="activity_upload_image_edt_hint">نظر شما در مورد غذای انتخابی...</string>
    <string name="addAddress">افزودن آدرس</string>
    <string name="address">آدرس</string>
    <string name="addressList">لیست آدرس‌ها</string>
    <string name="amountRequest">مبلغ درخواستی به تومان</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asanpardakht_card_no_hint">0000–0000–0000–0000</string>
    <string name="asanpardakht_cvv2">CVV2</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="changePassword">تغییر رمز عبور</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chooseAddress">انتخاب آدرس</string>
    <string name="choosePaymentType">انتخاب نوع پرداخت</string>
    <string name="cityName">نام شهر</string>
    <string name="confirmAddress">تایید آدرس</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">734954921898-dbs9cjnv5ued44smeaklregdloaqt3nk.apps.googleusercontent.com</string>
    <string name="enter">ورود</string>
    <string name="firebase_database_url">https://zoodfood-f0323.firebaseio.com</string>
    <string name="forgotPass">فراموشی رمز عبور</string>
    <string name="ga_trackingId">UA-72963330-3</string>
    <string name="gcm_defaultSenderId">734954921898</string>
    <string name="getJiringCode">دریافت کد جیرینگ</string>
    <string name="google_api_key">AIzaSyDiqBzQPUvhDUcihfqNVzaFwV_d1x61MAk</string>
    <string name="google_app_id">1:734954921898:android:90c3887de788eaeb</string>
    <string name="google_crash_reporting_api_key">AIzaSyDiqBzQPUvhDUcihfqNVzaFwV_d1x61MAk</string>
    <string name="google_maps_key">AIzaSyDJlNrilxxa7bxd8bQiQBMA9mF9mpQsqdE</string>
    <string name="google_storage_bucket">zoodfood-f0323.appspot.com</string>
    <string name="hockeyapp_update_version_details_label">%1$s\n%2$s - %3$s</string>
    <string name="increaseCredit">افزایش اعتبار</string>
    <string name="insertInformation">ثبت اطلاعات</string>
    <string name="intercom_gcm_sender_id"></string>
    <string name="intercom_link_written_by">Written by {author}</string>
    <string name="intercom_updated_d_ago">Updated {delta} days ago</string>
    <string name="intercom_updated_h_ago">Updated {delta} hours ago</string>
    <string name="intercom_updated_m_ago">Updated {delta} minutes ago</string>
    <string name="intercom_updated_w_ago">Updated {delta} weeks ago</string>
    <string name="introduceRestaurant">معرفی رستوران</string>
    <string name="introduceMarket">معرفی سوپر مارکت</string>

    <string name="isYouRestaurantOwner">آیا شما مالک رستوران هستید؟</string>
    <string name="isYouMarketOwner">آیا شما مالک سوپرمارکت هستید؟</string>


    <string name="newAddress">آدرس جدید</string>
    <string name="newPassword">رمز عبور جدید</string>
    <string name="newPasswordRepeat">تکرار رمز عبور جدید</string>
    <string name="newRegister">عضویت جدید</string>
    <string name="ok">OK</string>
    <string name="oldPassword">رمز عبور قبلی</string>
    <string name="orderConfirmationChooseGateWay">لطفا درگاه مورد نظر خود را انتخاب کنید</string>
    <string name="pageAddAddress">افزودن آدرس</string>
    <string name="pageAddressList">لیست آدرس‌ها</string>
    <string name="pageBasketList">سبد خرید</string>
    <string name="pageChangePassword">تغییر رمز عبور</string>
    <string name="pageChooseAddress">آدرس</string>
    <string name="pageConfirmAddress">تایید آدرس</string>
    <string name="pageEditAddress">ویرایش آدرس</string>
    <string name="pageFavouriteList">مورد علاقه‌ها</string>
    <string name="pageForgotPassFirstStep">فراموشی رمز عبور</string>
    <string name="pageIncreaseCredit">افزایش اعتبار</string>
    <string name="pageJiring">درگاه جیرینگ</string>
    <string name="pageOrderConfirmation">پرداخت</string>
    <string name="pageOrderList">لیست سفارش‌ها</string>
    <string name="pageOrderNearRestaurant">رستوران‌های نزدیک من</string>
    <string name="pagePickAddress">انتخاب آدرس</string>
    <string name="pageRestaurantList">لیست رستوران‌ها</string>
    <string name="pageShowAddress">مشاهده آدرس</string>
    <string name="pageSplash">صفحه اسپلش</string>
    <string name="pageUploadPhoto">آپلود عکس</string>
    <string name="pageUserProfile">حساب کاربری</string>
    <string name="pageUserRegister">ثبت نام</string>
    <string name="pageUserReviewList">نظرات شما</string>
    <string name="password">رمز عبور</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="restaurantName">نام رستوران</string>
    <string name="marketName">نام سوپرمارکت</string>

    <string name="restaurantPhoneNumber">شماره تلفن رستوران</string>
    <string name="marketPhoneNumber">شماره تلفن سوپرمارکت</string>


    <string name="sample_text_for_all_empty_textview">۱۰۰۰ تومان</string>
    <string name="saveAddress">ذخیره آدرس</string>
    <string name="searchBarHint">جستجو</string>
    <string name="selectAddressFromMap">انتخاب آدرس از روی نقشه</string>
    <string name="snappAddress">اضافه کردن آدرس های اسنپ</string>
    <string name="uploadPhoto">ارسال عکس و نظر</string>
    <string name="userName">نام کاربری</string>
    <string name="yourEmail">آدرس ایمیل شما</string>
    <string name="yourName">نام شما</string>
    <string name="yourPhoneNumber">شماره موبایل شما</string>

    <!--<string name="app_name">Places Api Autocomplete Widget</string>-->
    <string name="action_search">Search</string>
    <string name="attributions">Attributions</string>
    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
</resources>
