<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ir.msit87.mydigistore.view.AMTextView
                android:id="@+id/txtTitle"
                style="@style/TopDescription"
                android:contentDescription="change your pasword"
                android:text="@string/changePassword" />
            <!--<com.hollowsoft.library.fontdroid.TextView-->
            <!--android:layout_height="UNKNOWN_DATA_0x7f0a00fb"-->
            <!--android:layout_width="match_parent"-->


            <LinearLayout
                style="@style/InputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/divider_horizontal" />


                <LinearLayout style="@style/InputRowContainer">
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0093"-->

                    <ir.msit87.mydigistore.view.AMEditText
                        android:id="@+id/edtOldPassword"
                        style="@style/InputRowEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:contentDescription="your old pasword"
                        android:hint="@string/oldPassword"
                        android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
                    <!--<com.hollowsoft.library.fontdroid.EditText-->

                    <ImageView
                        style="@style/InputRowIcon"
                        android:src="@drawable/ic_password_gray" />
                    <!--android:layout_width="UNKNOWN_DATA_0x7f0a0095"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0098"-->

                </LinearLayout>


                <include layout="@layout/divider_horizontal" />


                <LinearLayout style="@style/InputRowContainer">
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0093"-->

                    <ir.msit87.mydigistore.view.AMEditText
                        android:id="@+id/edtNewPassword"
                        style="@style/InputRowEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:contentDescription="your new password"
                        android:hint="@string/newPassword"
                        android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
                    <!--<com.hollowsoft.library.fontdroid.EditText-->


                    <ImageView
                        style="@style/InputRowIcon"
                        android:src="@drawable/ic_password_gray" />
                    <!--android:layout_width="UNKNOWN_DATA_0x7f0a0095"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0098"-->


                </LinearLayout>


                <include layout="@layout/divider_horizontal" />


                <LinearLayout style="@style/InputRowContainer">
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0093"-->

                    <ir.msit87.mydigistore.view.AMEditText
                        android:id="@+id/edtRepeatNewPassword"
                        style="@style/InputRowEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:contentDescription="repeat your new password"
                        android:hint="@string/newPasswordRepeat"
                        android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
                    <!--<com.hollowsoft.library.fontdroid.EditText-->

                    <ImageView
                        style="@style/InputRowIcon"
                        android:src="@drawable/ic_password_gray" />
                    <!--android:layout_width="UNKNOWN_DATA_0x7f0a0095"-->
                    <!--android:layout_height="UNKNOWN_DATA_0x7f0a0098"-->

                </LinearLayout>


                <include layout="@layout/divider_horizontal" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0" />


            <LinearLayout
                android:id="@+id/lnlChangePasswordButton"
                style="@style/BottomButtonContainer"
                android:contentDescription="change password">
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="UNKNOWN_DATA_0x7f0a0065"-->

                <ir.msit87.mydigistore.view.AMTextView
                    style="@style/BottomButtonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changePassword" />
                <!--<com.hollowsoft.library.fontdroid.TextView-->

                <ImageView
                    style="@style/BottomButtonIcon"
                    android:src="@drawable/ic_action_white" />
                <!--android:layout_width="UNKNOWN_DATA_0x7f0a0067"-->
                <!--android:layout_height="UNKNOWN_DATA_0x7f0a0066"-->

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>